# rust-browser

./: ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  SLINT_MIGRATION.md  blocklist.txt  build.rs
src/: main.rs
src/application/: browser_service.rs  mod.rs  ports.rs  runtime.rs
src/domain/: blocklist.rs  blocklist_profile.rs  bookmark.rs  browser.rs  filter.rs  mod.rs  page.rs
src/infrastructure/: mod.rs
src/infrastructure/blocklist/: file_blocklist_policy.rs  hagezi_catalog.rs  mod.rs  source_loader.rs
src/infrastructure/config/: app_settings.rs
src/infrastructure/http/: mod.rs  page_fetcher.rs
src/infrastructure/storage/: bookmark_store.rs
src/presentation/: cli.rs  mod.rs
src/presentation/browser_shell_slint/: app_window.slint  bridge.rs  controller.rs  mod.rs
src/presentation/webview_shell/: blocked.html  components.rs  mod.rs  placeholder.html  runner.rs  shell.html  templates.rs
