[package]
name = "rust-browser"
version = "0.1.0"
edition = "2021"
description = "A lightweight, privacy-focused browser with ad-blocking"
license = "MIT"

[dependencies]
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "rustls-tls"] }
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
url = "2.5.0"
winit = "0.30.13"
wry = "0.55.1"
